--- a/Assets/Scripts/View/Jujubee.View.asmdef
+++ b/Assets/Scripts/View/Jujubee.View.asmdef
@@ -5,7 +5,8 @@
         "GUID:65e4849a4a446304d9c47a1918513032",
         "GUID:6055be8ebefd69e48b49212b09b47b2f",
         "GUID:9e24947de15b9834991c9d8411ea37cf",
-        "GUID:776d03a35f1b52c4a9aed9f56d7b4229"
+        "GUID:776d03a35f1b52c4a9aed9f56d7b4229",
+        "GUID:75469ad4d38634e559750d17036d5f7c"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
